tests/__snapshots__/validation-toRaiseError-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  3 | describe("argument for 'source'", () => {
  4 |   test("must be provided", () => {
> 5 |     expect().type.toRaiseError("one");
    |     ^
  6 |   });
  7 | });
  8 | 

      at ./__typetests__/toRaiseError.tst.ts:5:5

Error: An argument for 'target' must be of type 'string | number', received: 'true'.

  15 |     expect(check(123)).type
  16 |       // @ts-expect-error test test test
> 17 |       .toRaiseError(true, [2345]);
     |                     ^
  18 |   });
  19 | });
  20 | 

       at ./__typetests__/toRaiseError.tst.ts:17:21

Error: An argument for 'target' must be of type 'string | number', received: 'number[]'.

  15 |     expect(check(123)).type
  16 |       // @ts-expect-error test test test
> 17 |       .toRaiseError(true, [2345]);
     |                           ^
  18 |   });
  19 | });
  20 | 

       at ./__typetests__/toRaiseError.tst.ts:17:27

